Beginnings of AWT & Swing Terminal Widgets.
The following core ideas are going to be implemented by our widgets:
* Replaceable TerminalRenderers for doing the actual rendering of the TerminalModel.
  This will allow us to create different renderers for different terminal types, and potentially make it easy to extends the renderers with 
Options.
* All rendering occurrs in an off-screen buffer, which is rendered then repainted wholesale to the component.
* The TelnetFrame is a good test harness for the Terminal component.

Currently....
   The TerminalRenderer is responsible for reporting the minimum and preferred sizes of the Terminal component. It will report the preferred 
size based upon it's current Font setting, and the Minimum Size based upon the current font at 6 points.

We do not currently support scaling of fonts to the current size of the buffer, but we will in the future.

Next up is handling user input, sending it to the TerminalModel buffer (local echo) and out the TelnetClient output stream.

--- a/build.xml
+++ b/build.xml
@@ -64,4 +64,16 @@
 			</classpath>
 		</java>
 	</target>
+	
+	<target name="run-awt-test" depends="package">
+		<java classname="com.sf.jintn3270.awt.TelnetFrame" fork="true" maxmemory="128m">
+			<arg value="${test.host}"/>
+			<arg value="${test.port}"/>
+			<arg value="${test.ssl}"/>
+			<classpath>
+				<path refid="proj.classpath"/>
+				<filelist dir="." files="${ant.project.name}.jar"/>
+			</classpath>
+		</java>
+	</target>
 </project>
